--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,31 @@
-# Environment variables
+# Environment variables for Tarot de Marseille
 # Copy this file to .env.local for local development
+# or set these variables in your deployment environment
 
-# Base URL for assets in production
-# Example: /my-app/ or https://cdn.example.com/
+# =============================================================================
+# BASE URL CONFIGURATION
+# =============================================================================
+# The base URL where the app is served from.
+# This affects all asset paths (JS, CSS, images) and router navigation.
+#
+# Examples:
+#   /                     - App served at domain root (default)
+#   /tarot/               - App served at https://example.com/tarot/
+#   /apps/tarot-marseille/ - App served at https://example.com/apps/tarot-marseille/
+#
+# Important: Must start and end with a slash when not at root.
 VITE_BASE_URL=/
+
+# =============================================================================
+# CARD IMAGES PATH CONFIGURATION
+# =============================================================================
+# Path to the card images directory, relative to the base URL.
+# This allows serving card images from a different location (e.g., CDN, shared folder).
+#
+# Examples:
+#   cards                 - Default, images at {base_url}/cards/
+#   assets/images/cards   - Images at {base_url}/assets/images/cards/
+#   https://cdn.example.com/tarot/cards - Absolute URL to external CDN
+#
+# Note: For external URLs, include the full path without trailing slash.
+VITE_CARDS_PATH=cards
